--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "cSpell.words": [
-        "signin",
-        "signup"
-    ]
+  "cSpell.words": ["flowbite", "signin", "signup", "tailwindcss"]
 }
