--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["flowbite", "signin", "signup", "tailwindcss"]
+  "cSpell.words": [
+    "flowbite",
+    "mern",
+    "signin",
+    "signup",
+    "tailwindcss",
+    "tjotchm"
+  ]
 }
